--- a/public/documentation.html
+++ b/public/documentation.html
@@ -82,7 +82,22 @@
                     <td>JSON object confirming success or denial about new user</td>
                 </tr>
                 <tr>
-
+                    <td>Allow Users to add a movie to their favorites list</td>
+                    <td>/movies/user/movies</td>
+                    <td>POST</td>
+                    <td>A JSON object showing a list of movies that the user has favorited</td>
+                </tr>
+                <tr>
+                    <td>User removes a movies from the favorites list</td>
+                    <td>/movies/user/movies</td>
+                    <td>DELTE</td>
+                    <td>A confirmation showing that the movie has been removed from the favorites list</td>
+                </tr>
+                <tr>
+                    <td>User deregistration</td>
+                    <td>/movies/user</td>
+                    <td>DELETE</td>
+                    <td>A confirmation showing that the user has successfully deregisted their account</td>
                 </tr>
             </tbody>
         </table>
