--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <p>This web application will provide users with loads of information about all of their favorite movies and actors!  Not only will your be able to look up your<br>
+        <p>This web application will provide users with loads of information about all of their favorite movies, directors, genres, and more!  Not only will your be able to look up your<br>
             favorite actors and movies at your leisure, you will be able to personalize your experience.  In this application, you will be able to create your own accounte which<br>
             will allow you make personalized lists of your go-to movies and which actors make the movie a must-see!
         </p>
